# application/controllers/Booking_settings.php
@@ -41,7 +41,6 @@ class Booking_settings extends EA_Controller
         $this->load->model('settings_model');
 
         $this->load->library('accounts');
-        $this->load->library('notifications');
         $this->load->library('timezones');
     }
 
