# application/views/pages/account.php
@@ -158,20 +158,6 @@
                                     ]); ?>
                                 </div>
 
-                                <div>
-                                    <label class="form-label mb-3">
-                                        <?= lang('options') ?>
-                                    </label>
-                                </div>
-
-                                <div class="border rounded mb-3 p-3">
-                                    <div class="form-check form-switch">
-                                        <input class="form-check-input" id="notifications" type="checkbox">
-                                        <label class="form-check-label" for="notifications">
-                                            <?= lang('receive_notifications') ?>
-                                        </label>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </fieldset>
