# application/views/pages/providers.php
@@ -274,12 +274,6 @@
                                     </small>
                                 </div>
 
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="notifications" disabled>
-                                    <label class="form-check-label" for="notifications">
-                                        <?= lang('receive_notifications') ?>
-                                    </label>
-                                </div>
                             </div>
 
                             <div>
@@ -404,4 +398,3 @@
 <script src="<?= asset_url('assets/js/pages/providers.js') ?>"></script>
 
 <?php end_section('scripts'); ?>
-
